[gd_scene load_steps=14 format=3 uid="uid://dplyag11ypi8t"]

[ext_resource type="Script" uid="uid://bdxlmvyvfgewd" path="res://actors/weapons/Laser.gd" id="1"]
[ext_resource type="Script" uid="uid://bx28gpgdlmtid" path="res://addons/ECM/Component.gd" id="2"]
[ext_resource type="Script" uid="uid://dg3ny04agcjtp" path="res://addons/ECM/Entity.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://dih85s8b72e2l" path="res://assets/sprites/weapons/trail_spark.png" id="4"]
[ext_resource type="PackedScene" path="res://combat/traits/Strategic.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://yw0vjfqmdjje" path="res://godot4/traits/Waiter.tscn" id="6"]

[sub_resource type="CanvasItemMaterial" id="1"]

[sub_resource type="SegmentShape2D" id="2"]
resource_local_to_scene = true
b = Vector2(0, 0)

[sub_resource type="CanvasItemMaterial" id="3"]

[sub_resource type="Curve" id="4"]
_limits = [0.0, 3.0, 0.0, 1.0]
_data = [Vector2(0, 3), 0.0, -0.029752, 0, 0, Vector2(1, 0), -7.06612, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="5"]
curve = SubResource("4")

[sub_resource type="ParticleProcessMaterial" id="6"]
gravity = Vector3(0, 0, 0)
scale_min = 0.0
scale_max = 0.0
scale_curve = SubResource("5")

[sub_resource type="ParticleProcessMaterial" id="7"]
emission_shape = 1
emission_sphere_radius = 10.0
gravity = Vector3(0, 0, 0)
scale_min = 0.0
scale_max = 0.0
scale_curve = SubResource("5")

[node name="Laser" type="RayCast2D"]
enabled = true
target_position = Vector2(20000, 0)
collision_mask = 1188880
collide_with_areas = true
script = ExtResource("1")

[node name="Waiter" parent="." instance=ExtResource("6")]

[node name="Strategic" parent="." instance=ExtResource("5")]

[node name="Entity" type="Node" parent="."]
script = ExtResource("3")

[node name="PhaseThroughDeadly" type="Node" parent="Entity"]
script = ExtResource("2")

[node name="Trigger" type="Node" parent="Entity"]
script = ExtResource("2")

[node name="Line2D" type="Line2D" parent="."]
material = SubResource("1")
points = PackedVector2Array(0, 0, 0, 0)
width = 40.0
begin_cap_mode = 2
end_cap_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="RayArea" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 3083

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayArea"]
shape = SubResource("2")

[node name="CastingParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(1.4, 1.4, 1.4, 1)
material = SubResource("3")
amount = 4
lifetime = 0.3
process_material = SubResource("6")
texture = ExtResource("4")

[node name="CollisionParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("3")
amount = 16
lifetime = 0.5
visibility_rect = Rect2(-1000, -1000, 2000, 2000)
local_coords = false
process_material = SubResource("7")
texture = ExtResource("4")

[connection signal="area_entered" from="RayArea" to="." method="_on_RayArea_area_entered"]
[connection signal="body_entered" from="RayArea" to="." method="_on_RayArea_body_entered"]
